--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -7,7 +7,7 @@
     <h3>MENU</h3>
     <a href="/ " class="{{#if home}}active{{/if}}">Home</a>
     <a href="/about" class="{{#if about}}active{{/if}}"><span>About</span></a>
-    <a href="/menu" class="{{#if order}}active{{/if}}"><span>Menu</span></a>
+    <a href="/menu" class="{{#if menu}}active{{/if}}"><span>Menu</span></a>
     <a href="/contact" class="{{#if contact}}active{{/if}}"><span>Contact</span></a>
 </div>
 <div id="footer-contact">
