--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -1,15 +1,15 @@
 #order {
-  margin-top: 150px;
-  position: relative; }
+  position: relative;
+  margin-top: 100px; }
 
 #order h3 {
   color: #D3232D;
-  font-size: 25px; }
+  font-size: 15px; }
 
-#order-form {
-  width: 50%; }
+#info {
+  padding: 10px; }
 
-#order-form input {
+#info input {
   width: 100%;
   height: 40px;
   margin-top: 4%;
@@ -19,14 +19,14 @@
   border-bottom: gray solid 1px;
   font-size: 15px; }
 
-#order-form #address-input {
+#info #address-input {
   width: 100%; }
 
-#order-form #address-input input {
+#info #address-input input {
   width: 47%; }
 
-#order-form #address-input select {
-  width: 25%;
+#info #address-input select {
+  width: 24%;
   height: 40px;
   outline: none;
   border: none;
@@ -34,28 +34,73 @@
   font-size: 15px;
   margin-top: 4%; }
 
-#order-form #submit {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%);
-  width: 25%;
-  background-color: #D3232D;
-  color: white;
-  font-weight: bold; }
+#info input[type="radio"] {
+  width: 15px; }
 
-#order-form label {
+#info label[for="method"], #pay-method span {
+  display: inline-block;
+  line-height: 40px;
+  height: 40px;
+  color: black;
+  font-size: 15px;
+  margin-right: 7px; }
+
+#info #pay-method {
+  border-bottom: gray solid 1px;
+  margin-left: 1px;
+  padding: 0 10px; }
+
+#info #message {
+  margin-top: 30px; }
+
+#pay {
+  padding: 10px; }
+
+#pay input {
+  width: 100%;
+  height: 40px;
+  margin-top: 4%;
+  padding: 10px;
+  outline: none;
+  border: none;
+  border-bottom: gray solid 1px;
+  font-size: 15px; }
+
+#pay #month, #year, #ccv {
+  width: 32% !important; }
+
+label {
   font-size: 12px;
   color: #D3232D; }
 
-#order-form form input.bad {
-  border-bottom: #D3232D solid 2px; }
+label {
+  display: block;
+  height: 16px; }
 
-#order-form form input.good {
-  border-bottom: lightgreen solid 2px; }
+label[for="month"], label[for="year"], label[for="ccv"] {
+  display: inline-block;
+  width: 32%; }
+
+#submit {
+  position: absolute;
+  left: 50%;
+  bottom: 5%;
+  transform: translate(-50%);
+  width: 50%;
+  height: 30px;
+  background-color: #D3232D;
+  color: white;
+  font-weight: bold;
+  border: none; }
+
+.bad {
+  border-bottom: #D3232D solid 2px !important; }
+
+.good {
+  border-bottom: lightgreen solid 2px !important; }
 
 #cart-table {
-  margin: 50px 0 150px 0;
+  margin: 20px 0 100px 0;
   width: 100%;
   font-size: 12px; }
 
@@ -93,6 +138,10 @@ table, thead, tbody, tr, td {
   text-align: right; }
 
 @media screen and (min-width: 600px) {
+  #order {
+    margin-top: 150px; }
+  #cart-table {
+    margin: 50px 0 150px 0; }
   #cart-table {
     font-size: 14px; }
   #cart-table thead td:first-child {
@@ -103,5 +152,20 @@ table, thead, tbody, tr, td {
     width: 10%; } }
 
 @media screen and (min-width: 768px) {
+  #order h3 {
+    color: #D3232D;
+    font-size: 25px; }
+  #info {
+    padding: 0;
+    width: 47%;
+    float: left; }
+  #info #message {
+    margin-top: 40px; }
+  #pay {
+    width: 47%;
+    float: right; }
+  #submit {
+    width: 25%;
+    height: 40px; }
   #cart-table thead td {
     width: 20%; } }
