--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -46,17 +46,17 @@ a {
 }
 
 // Scrollbar
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 1.85vw;
     height: 10px;
     background-color: #F5F5F5;
 }
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-image: url('/img/general/scrollbar.jpg');
     background-size: 300%;
     background-position: center;
 }
-::-webkit-scrollbar-thumb:active {
+body::-webkit-scrollbar-thumb:active {
     background-position: left;
 }
 
