--- a/src/resources/scss/user.scss
+++ b/src/resources/scss/user.scss
@@ -2,52 +2,46 @@
 
 #user-setting {
     position: relative;
-    top: 80px;
-    height: 85vh;
+    top: 60px;
+    height: 675px;
     margin-bottom: 150px;
     background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('../img/general/wallpaper-0.jpg');
 }
 #user-setting > div {
     position: absolute;
-    right: 10%;
+    right: 50%;
     top: 50%;
-    transform: translateY(-50%);
-    width: 750px;
+    transform: translate(50%, -50%);
+    width: 80%;
     height: 90%;
     padding: 2% 2% 2% 0;
     background-color: white;
 }
 #btn {
-    width: 30%;
-    height: 100%;
-    float: left;
+    width: 100%;
     position: relative;
-    padding-top: 30px;
-}
-#btn > div:hover {
-    cursor: pointer;
+    padding: 30px;
 }
 #btn .btn-current {
     color: $main-color;
     border-bottom: $main-color solid 2px;
 }
 #btn div {
-    width: 70%;
-    height: 40px;
-    margin: auto;
+    width: 60%;
     border-bottom: gray solid 1px;
     margin-bottom: 20px;
+    font-size: 15px;
 }
 #btn #logout {
     position: absolute;
-    left: 50%;
-    top: 89%;
-    transform: translate(-50%);
-    width: 60%;
+    left: 95%;
+    top: 65%;
+    transform: translate(-100%, -50%);
+    width: 30%;
 }
 #btn #logout input {
     width: 100%;
-    height: 40px;
+    height: 30px;
     background-color: $main-color;
     color: white;
     font-weight: bold;
@@ -56,18 +50,19 @@
 }
 #box {
     position: relative;
-    width: 70%;
-    height: 100%;
+    width: 100%;
+    height: 65%;
     padding-left: 5%;
     border-left: gray solid 1px;
 }
 #box h3 {
     color: $main-color;
-    font-size: 25px;
+    font-size: 18px;
+    margin: 5px;
 }
 #box input {
     width: 100%;
-    height: 40px;
+    height: 30px;
     outline: none;
     border: none;
     border-bottom: gray solid 1px;
@@ -80,10 +75,10 @@
     margin-bottom: 20px;
 }
 #box #address-input input {
-    width: 38%;
+    width: 100%;
 }
 #box #address-input select {
-    width: 30%;
+    width: 49%;
     height: 40px;
     outline: none;
     border: none;
@@ -95,8 +90,9 @@
 #box [type="submit"] {
     position: absolute;
     width: 50%;
+    height: 40px;
     left: 27.5%;
-    top: 85%;
+    bottom: 0;
     border: none;
     background-color: $main-color;
     color: white;
@@ -111,4 +107,95 @@
 }
 #box form input.good {
     border-bottom: lightgreen solid 2px;
+}
+
+#month, #year, #ccv {
+    width: 32% !important;
+}
+label {
+    display: block;
+    height: 16px;
+}
+label[for="month"], label[for="year"], label[for="ccv"] {
+    display: inline-block;
+    width: 32%;
+}
+
+
+// For small tablet & large phone
+@media screen and (min-width: 600px) {
+    #user-setting {
+        height: 750px;
+    }
+}
+
+// For Tablet
+@media screen and (min-width: 768px) {
+    #user-setting {
+        height: 600px;
+        top: 80px;
+    }
+    #user-setting > div {
+        width: 82%;
+    }
+    #btn {
+        width: 33%;
+        height: 100%;
+        padding: 10px 0;
+        float: left;
+    }
+    #btn div {
+        height: 40px;
+        margin: auto;
+        margin-bottom: 20px;
+        width: 75%;
+    }
+    #btn #logout {
+        top: 89%;
+        left: 50%;
+        transform: translate(-50%);
+        width: 60%;
+    }
+    #btn #logout input {
+        height: 40px;
+    }
+    #box {
+        width: 66%;
+        height: 100%;
+    }
+    #box h3 {
+        font-size: 25px;
+    }
+    #box input {
+        height: 40px;
+    }
+    #box #address-input input {
+        width: 38%;
+    }
+    #box #address-input select {
+        width: 29%;
+    }
+
+}
+
+
+// For PC
+@media screen and (min-width: 992px) {
+    #user-setting > div {
+        right: 37%;
+        width: 700px;
+    }
+    #btn > div:hover {
+        cursor: pointer;
+    }
+    #box #address-input {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #box #address-input input {
+        width: 37%;
+    }
+    #box #address-input select {
+        width: 30%;
+    }
 }
