--- a/src/resources/views/contact.hbs
+++ b/src/resources/views/contact.hbs
@@ -6,17 +6,17 @@
 </section>
 <section id="contact-form">
     <h2 class="heading">CONTACT</h2>
-    <form action="">
-        <input type="text" placeholder="Name" required>
-        <input type="email" placeholder="Email" required>
-        <input type="tel" placeholder="Tel">
-        <input type="text" placeholder="Address">
-        <textarea name="" id="" placeholder="Message" required></textarea>
+    <form action="/contact" method="POST">
+        <input name="name" type="text" placeholder="Name" required>
+        <input name="email" type="email" placeholder="Email" required>
+        <input name="phone" type="text" placeholder="Phone">
+        <input name="address" type="text" placeholder="Address">
+        <textarea name="message" id="" placeholder="Message" required></textarea>
         <input type="submit" value="SEND">
     </form>
     <div id="contact-address">
         <h3>Or direct contact</h3>
-        <a href="https://goo.gl/maps/LNru6j16mxMfBLLu5" id="contact-where">Address: Solar system, Earth</a>
+        <a target="_blank" href="https://goo.gl/maps/DJSU1DjNTN6pJftw7" id="contact-where">Address: 227 Nguyễn Văn Cừ, Phường 4, Quận 5, Thành phố Hồ Chí Minh</a>
         <a href="tel:0123456789" id="contact-phone">Phone: 0123456789</a>
         <a href="mailto:one@salty.tuna" id="contact-email">Email: one@salty.tuna</a>
         <div id="contact-nav">
@@ -36,5 +36,5 @@
     </div>
 </section>
 <section id="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d49365.125933911135!2d132.4925646!3d33.7176441!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3545615a1e5be903%3A0xa6a816cd520f72b0!2sAo%20Island!5e1!3m2!1svi!2s!4v1651060337348!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7839.2563864228005!2d106.67904594923722!3d10.763111395708204!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1c06f4e1dd%3A0x43900f1d4539a3d!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBLaG9hIGjhu41jIFThu7Egbmhpw6puIC0gxJDhuqFpIGjhu41jIFF14buRYyBnaWEgVFAuSENN!5e0!3m2!1svi!2s!4v1670690716456!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
