--- a/src/resources/scss/storage.scss
+++ b/src/resources/scss/storage.scss
@@ -4,11 +4,13 @@ section {
     margin: 100px 150px;
 }
 #super-wallpaper {
-    top: 0;
+    top: 80px;
     margin: 0;
 }
-
-#order-list > p {
+#storage-list h2 {
+    margin-top: 80px;
+}
+#storage-list > p {
     text-align: center;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -16,67 +18,57 @@ section {
     width: 50%;
     margin: 50px auto;
 }
-#order-list #order-prev, #order-next {
+#storage-list #storage-prev, #storage-next {
     text-decoration: underline;
     cursor: pointer;
     color: $main-color;
 }
-#order-list #order-prev {
+#storage-list #storage-prev {
     float: left;
 }
-#order-list #order-next {
+#storage-list #storage-next {
     float: right;
 }
-#order-list #order-page {
+#storage-list #storage-page {
     display: inline-block;
     width: 80px;
     line-height: 30px;
     background-color: $main-color;
     color: white;
 }
-#order-list > div {
+#storage-list > div {
     margin: 10px 10px 30px 10px;
     box-shadow: 0px 0px 10px darkgray;
 }
-#order-list h3 {
+#storage-list #empty {
+    line-height: 200px;
+    text-align: center;
+    font-size: 20px;
+    color: gray;
+}
+#storage-list h3 {
     color: $main-color;
     text-transform: uppercase;
 }
-#order-list .user-info {
+#storage-list .user-info {
     width: 40%;
-    height: 400px;
+    height: 450px;
     padding: 20px 40px;
     float: left;
 }
-#order-list .user-info p {
+#storage-list .user-info p {
     padding: 10px;
     border-bottom: lightgray solid 1px;
 }
-#order-list .confirm {
-    position: relative;
-    float: left;
-    width: 40%;
-    height: 100px;
+#storage-list .user-info span {
+    background-color: $main-color;
+    color: white;
+    padding: 5px;
+    float: right;
+    border-radius: 5px;
+    cursor: pointer;
 }
-#order-list .confirm input[type="submit"] {
-    position: absolute;
-    left: 50%;
-    top: 25%;
-    transform: translate(-50%);
-    border: $main-color solid 2px;
-    color: $main-color;
-    background-color: white;
-    font-weight: bold;
-    width: 50%;
-    height: 40px;
-}
-@keyframes button-bgcolor {
-    to {background-color: $main-color; color: white;}
-}
-#order-list .confirm input[type="submit"]:hover {
-    animation: button-bgcolor 0.25s forwards;
-}
-#order-list .order-content {
+#storage-list .order-content {
     float: right;
     width: 60%;
     padding: 20px 40px;
