--- a/src/resources/views/body/admin/admin.hbs
+++ b/src/resources/views/body/admin/admin.hbs
@@ -1,5 +1,5 @@
 <section id="super-wallpaper">
-    <img src="img/general/wallpaper-2.jpg" alt="">
+    <img src="/img/general/wallpaper-2.jpg" alt="">
     <h1>ADMIN</h1>
 </section>
 
@@ -9,8 +9,8 @@
         <input type="hidden" name="supername" id="supername">
         <input type="hidden" name="password">
         <input type="text" name="name" placeholder="Name">
-        <input type="date" name="birthday">
         <input type="tel" name="phone" placeholder="Phone">
+        <input type="text" name="email" placeholder="Email">
         <input type="text" name="address" placeholder="Address">
     </form>
     {{#each action}}
@@ -20,8 +20,6 @@
     {{/each}}
 </section>
 
-<section id="revenue">
-    <h2 class="heading">REVENUE</h2>
-    <div>Order</div>
-    <div>Revenue</div>
+<section id="menu">
+    <h2 class="heading">MENU MANGAGE</h2>
 </section>
